@@ -1,3 +1,8 @@
+Thu Sep 13 12:26:17 2001  Brian Gough  <bjg@network-theory.co.uk>
+
+	* svdstep.c (svd2): fixed bug where singular values in 2x2 svd
+ 	were not ordered correctly.
+
 Mon Sep 10 22:35:24 2001  Brian Gough  <bjg@network-theory.co.uk>
 
 	* test.c (test_LUc_solve): added a test for complex LU
